--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -1,4 +1,4 @@
-name: Commit message validator
+name: Build and test
 on:
   pull_request:
     types:
@@ -28,3 +28,18 @@ jobs:
           npm install
           npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
         working-directory: cdk
+
+  run-codebuild:
+    runs-on: ubuntu-latest
+    needs: pr-conventions
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.RELEASES_AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.RELEASES_AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+      - name: Run CodeBuild
+        uses: aws-actions/aws-codebuild-run-build@v1
+        with:
+          project-name: build-pull-request
