--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -282,6 +282,15 @@ Resources:
               Resource: !Sub ${ReleasesBucket.Arn}
             - Effect: Allow
               Action:
+                - codebuild:StartBuild
+                - codebuild:BatchGetBuilds
+              Resource: arn:aws:codebuild:eu-west-1:824014778649:project/build-pull-request
+            - Effect: Allow
+              Action:
+                - logs:GetLogEvents
+              Resource: "*"
+            - Effect: Allow
+              Action:
                 - s3:PutObject
                 - s3:GetObject
                 - s3:PutObjectAcl
@@ -292,7 +301,6 @@ Resources:
                 - s3:GetBucketLocation
                 - s3:GetEncryptionConfiguration
               Resource: !Sub arn:aws:s3:::superwerker-assets-*
-
 
   DeploymentBucketUserAccessKey:
     Type: AWS::IAM::AccessKey
