ci: use new IAM roles

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,10 @@ name: Release
 on:
   workflow_dispatch: {}
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,6 +14,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-region: eu-central-1
+        role-to-assume: arn:aws:iam::824014778649:role/gh-actions-superwerker-release
 
     - name: Bounce version and create git tags
       uses: cycjimmy/semantic-release-action@v3
@@ -22,7 +32,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and publish 
+    - name: Build and publish
       if: steps.semantic.outputs.new_release_published == 'true'
       run: |
         pip install cfn-flip
@@ -36,8 +46,6 @@ jobs:
       env:
         SUPERWERKER_VERSION: ${{ steps.semantic.outputs.new_release_version }}
         AWS_DEFAULT_REGION: eu-central-1
-        AWS_ACCESS_KEY_ID: ${{ secrets.RELEASES_AWS_ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.RELEASES_AWS_SECRET_ACCESS_KEY }}
       shell: bash
       working-directory: cdk
 
