--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -32,13 +32,14 @@ jobs:
   run-codebuild:
     runs-on: ubuntu-latest
     needs: pr-conventions
+    permissions:
+      id-token: write
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.RELEASES_AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.RELEASES_AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
+          role-to-assume: arn:aws:iam::824014778649:role/gh-actions-superwerker-test
       - name: Run CodeBuild
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
