fix: add 180m timeout to GH action for run-codebuild
Signed-off-by: Manuel Vogel <mavogel@posteo.de>

--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -32,6 +32,7 @@ jobs:
   run-codebuild:
     runs-on: ubuntu-latest
     needs: pr-conventions
+    timeout-minutes: 180 #3h as test run longer than the default timeout of 1h 
     permissions:
       id-token: write
     steps:
