chore: increase run-codebuild timeout to match aws role session timeout
Signed-off-by: Manuel Vogel <mavogel@posteo.de>

--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -32,7 +32,7 @@ jobs:
   run-codebuild:
     runs-on: ubuntu-latest
     needs: pr-conventions
-    timeout-minutes: 180 #3h as test run longer than the default timeout of 1h 
+    timeout-minutes: 240 #4h to match 'gh-actions-superwerker-test' role session timeout
     permissions:
       id-token: write
     steps:
