--- a/cdk/package.json
+++ b/cdk/package.json
@@ -3,13 +3,9 @@
   "scripts": {
     "synth": "cdk synth",
     "test": "jest",
-    "publish-assets": "npx ts-node -P tsconfig.json --prefer-ts-exts src/scripts/publish-assets.ts",
-    "prepare": "cd .. && husky install cdk/.husky"
+    "publish-assets": "npx ts-node -P tsconfig.json --prefer-ts-exts src/scripts/publish-assets.ts"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@types/async-retry": "^1.4.5",
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
@@ -26,13 +22,11 @@
     "npm-check-updates": "^16.6.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10",
-    "typescript": "^4.9.4",
-    "husky": "^8.0.0"
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.61.1-alpha.0",
     "@types/aws-lambda": "^8.10.109",
-    "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.61.0",
     "aws-sdk": "^2.1297.0",
     "cdk-assets": "^2.61.0",
