chore: disable edited type on PR
Signed-off-by: Manuel Vogel <mavogel@posteo.de>

--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types:
       - opened
-      - edited
+      #- edited # disabled on purpose
       - reopened
       - synchronize
 jobs:
