--- a/cdk/package.json
+++ b/cdk/package.json
@@ -35,6 +35,7 @@
     "aws-sdk": "^2.1297.0",
     "cdk-assets": "^2.61.0",
     "constructs": "^10.1.224",
+    "endent": "^2.1.0",
     "uuid4": "^2.0.3"
   },
   "license": "Apache-2.0",
