feat: migrate living documentation to cdk

--- a/cdk/package.json
+++ b/cdk/package.json
@@ -37,6 +37,7 @@
     "aws-sdk": "^2.1297.0",
     "cdk-assets": "^2.66.1",
     "constructs": "^10.1.224",
+    "endent": "^2.1.0",
     "uuid4": "^2.0.3",
     "axios": "^1.2.3"
   },
