fix(ci): missing quote
Signed-off-by: Manuel Vogel <mavogel@posteo.de>

--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -56,7 +56,7 @@ jobs:
           echo "SUPERWERKER_REGION '${{ env.SUPERWERKER_REGION }}'"
           echo "UPDATE_FROM_LATEST_RELEASE '${{ env.UPDATE_FROM_LATEST_RELEASE }}'"
       - name: test override of the envs
-        if: ${{ github.event_name == "workflow_dispatch }}
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
           echo "OVERRIDE in workflow_dispatch"
           echo "SUPERWERKER_REGION='${{ inputs.superwerker-region }}'" >> $GITHUB_ENV
