--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -11,8 +11,23 @@ on:
       superwerker-region:
         description: 'The region to deploy superwerker to'
         required: true
-        type: string
-        default: 'eu-central-1'
+        type: choice
+        options:
+        - ap-northeast-1
+        - ap-northeast-2
+        - ap-south-1
+        - ap-southeast-1
+        - ap-southeast-2
+        - ca-central-1
+        - eu-central-1
+        - eu-north-1
+        - eu-west-1
+        - eu-west-2
+        - eu-west-3
+        - sa-east-1
+        - us-east-1
+        - us-east-2
+        - us-west-2
       update-from-latest-release:
         description: 'False if it is a fresh superwerker installation, true if the installation shall be updated from the last release version'
         required: true
