--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -68,31 +68,21 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - name: envs before
-        run: |
-          echo "SUPERWERKER_REGION '${{ env.SUPERWERKER_REGION }}'"
-          echo "UPDATE_FROM_LATEST_RELEASE '${{ env.UPDATE_FROM_LATEST_RELEASE }}'"
-      - name: test override of the envs
+      - name: Override of the envs for workflow_dispatch 
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
-          echo "OVERRIDE in workflow_dispatch"
-          echo "SUPERWERKER_REGION='${{ inputs.superwerker-region }}'" >> $GITHUB_ENV
-          echo "UPDATE_FROM_LATEST_RELEASE='${{ inputs.update-from-latest-release }}'" >> $GITHUB_ENV
-      - name: test passing the envs to the next step
-        run: |
-          echo "NEXT STEP"
-          echo "SUPERWERKER_REGION '${{ env.SUPERWERKER_REGION }}'"
-          echo "UPDATE_FROM_LATEST_RELEASE '${{ env.UPDATE_FROM_LATEST_RELEASE }}'"
-      #- name: Configure AWS credentials
-      #  uses: aws-actions/configure-aws-credentials@v1
-      #  with:
-      #    aws-region: eu-west-1
-      #    role-to-assume: arn:aws:iam::824014778649:role/gh-actions-superwerker-test
-      #    role-duration-seconds: 7200      # Set the session duration to 2 hours as codebuild takes very long
-      #- name: Run CodeBuild
-      #  uses: aws-actions/aws-codebuild-run-build@v1
-      #  with:
-      #    project-name: build-pull-request
-      #    env-vars-for-codebuild: |
-      #      SUPERWERKER_REGION,
-      #      UPDATE_FROM_LATEST_RELEASE      
+          echo "SUPERWERKER_REGION=${{ inputs.superwerker-region }}" >> $GITHUB_ENV
+          echo "UPDATE_FROM_LATEST_RELEASE=${{ inputs.update-from-latest-release }}" >> $GITHUB_ENV
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: eu-west-1
+          role-to-assume: arn:aws:iam::824014778649:role/gh-actions-superwerker-test
+          role-duration-seconds: 7200      # Set the session duration to 2 hours as codebuild takes very long
+      - name: Run CodeBuild
+        uses: aws-actions/aws-codebuild-run-build@v1
+        with:
+          project-name: build-pull-request
+          env-vars-for-codebuild: |
+            SUPERWERKER_REGION,
+            UPDATE_FROM_LATEST_RELEASE
