--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -65,7 +65,6 @@ jobs:
   run-codebuild:
     runs-on: ubuntu-latest
     needs: pr-conventions
-    timeout-minutes: 180 #3h as test run longer than the default timeout of 1h
     permissions:
       id-token: write
     steps:
@@ -79,7 +78,7 @@ jobs:
         with:
           aws-region: eu-west-1
           role-to-assume: arn:aws:iam::824014778649:role/gh-actions-superwerker-test
-          role-duration-seconds: 14400
+          role-duration-seconds: 7200      # Set the session duration to 2 hours as codebuild takes very long
       - name: Run CodeBuild
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
