--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,7 +14,7 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
-    "aws-cdk": "^2.61.0",
+    "aws-cdk": "^2.96.2",
     "esbuild": "^0.17.3",
     "eslint": "^8.32.0",
     "eslint-import-resolver-node": "^0.3.7",
@@ -33,12 +33,12 @@
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
-    "aws-cdk-lib": "^2.66.1",
+    "aws-cdk-lib": "^2.96.2",
     "aws-sdk": "^2.1297.0",
-    "cdk-assets": "^2.66.1",
+    "axios": "^1.2.3",
+    "cdk-assets": "^2.96.2",
     "constructs": "^10.1.224",
-    "uuid4": "^2.0.3",
-    "axios": "^1.2.3"
+    "uuid4": "^2.0.3"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
