fix: python test artifacts breaking cdk synth

--- a/cdk/Makefile
+++ b/cdk/Makefile
@@ -8,3 +8,4 @@ test:
 	# yarn jest --silent
 	echo $(PYTHON_DIRS)
 	$(foreach dir,$(PYTHON_DIRS),$(MAKE) -C $(dir) test;)
+	$(foreach dir,$(PYTHON_DIRS),rm -rf $(dir)/venv;)
